# CGI_Labs

./: README.md
Skeleton-Lab2/: CMakeLists.txt  SDL2Auxiliary.cpp  skeleton.cpp
Skeleton-Lab3/: CMakeLists.txt  skeleton.cpp
